[gd_scene load_steps=7 format=3 uid="uid://d2h0o0iivfvrs"]

[ext_resource type="Texture2D" uid="uid://57y7oyur5323" path="res://Sprites/UI/InventorySlot.png" id="1_o2pv5"]
[ext_resource type="Script" path="res://Scripts/Slot.gd" id="2_ci6y4"]
[ext_resource type="Texture2D" uid="uid://dmkp1sw5fshsn" path="res://Sprites/UI/PlaceholderIcon.png" id="3_msyei"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_a2psu"]
texture = ExtResource("1_o2pv5")

[sub_resource type="SystemFont" id="SystemFont_onluv"]
font_names = PackedStringArray("Cascadia Code")

[sub_resource type="LabelSettings" id="LabelSettings_wmsr4"]
font = SubResource("SystemFont_onluv")
font_size = 18
font_color = Color(0, 0, 0, 1)
shadow_size = 2
shadow_color = Color(0, 0, 0, 0.0117647)
shadow_offset = Vector2(2, 2)

[node name="InventorySlot" type="Panel"]
custom_minimum_size = Vector2(256, 64)
theme_override_styles/panel = SubResource("StyleBoxTexture_a2psu")
script = ExtResource("2_ci6y4")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 6.0
offset_top = 6.0
offset_right = 59.0
offset_bottom = 59.0
texture = ExtResource("3_msyei")
expand_mode = 1

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 64.0
offset_top = 7.0
offset_right = 250.0
offset_bottom = 58.0
text = "Item name"
label_settings = SubResource("LabelSettings_wmsr4")
autowrap_mode = 3
clip_text = true

[connection signal="gui_input" from="." to="." method="_on_gui_input"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
